created a backgroundcolorchanger and add a random guessing game

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- linking with css -->
+    <link rel="stylesheet" href="./styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lunch</title>
+    <title>Javascricpt</title>
   </head>
   <body>
-    <h1>it's time</h1>
+    <button id="button">Change Color</button>
+
+    <div>
+      <h1 id="win"></h1>
+      <p id="lose"></p>
+      <button id="play">play</button>
+    </div>
+    <h1 id="loopedValue"></h1>
+    <!-- linking with js -->
+    <script src="./script.js"></script>
   </body>
 </html>
